[package]
description = "Apenas um projeto para treinar um pouco de RUST."
edition = "2021"
name = "exchange-rust"
version = "0.1.0"

[dependencies]
openssl = {version = "0.10", features = ["vendored"]}
reqwest = {version = "0.11.6", features = ["json"]}
tokio = {version = "1", features = ["full"]}
